--- a/index.html
+++ b/index.html
@@ -18,67 +18,70 @@
       <div class="row">
         <div class="col-xs-8 col-xs-offset-3">
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-8 col-xs-offset-3">
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-8 col-xs-offset-3">
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-8 col-xs-offset-3">
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
           <div class="col-xs-2 card">
-            <img src="img/background.png" alt="" width="100%" height="100%"/>
+            <img class="card-img" src="img/background.png" alt="" width="100%" height="100%"/>
           </div>
         </div>
       </div>
+    </div>
+    <div class="container">
+      <span class="btn btn-info" id="restart">Restart</span>
     </div>
   </body>
 </html>
