add restart button for user to restart the match game

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
       </div>
     </div>
     <div class="container">
-      <span class="btn btn-info" id="restart">Restart</span>
+      <form class="" action="index.html" method="post">
+        <button class="btn btn-info" id="restart">Restart</span>
+      </form>
     </div>
   </body>
 </html>
